# arc-agi-solver

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  arc_performance_analysis.md  expanded_unsat_signatures.jsonl  optimization_plan.md  pyproject.toml  retrieval_store.jsonl  test_real_arc_performance.py
.github/workflows/: ci.yml  performance-guard.yml
.kiro/specs/arc-agi-solver/: ARC AGI.code-workspace  design.md  requirements.md  tasks.md
conf/: config.yaml
conf/development/: default.yaml
conf/llm/: default.yaml
conf/perception/: default.yaml
conf/reasoning/: default.yaml
conf/search/: default.yaml
conf/system/: default.yaml
docs/: task3_summary.md
scripts/: analyze_portfolio_metrics.py  arc_agi2_runner.py  benchmark_e2e_deterministic.py  compare_portfolio_performance.py  run_comprehensive_tests.py  run_real_arc_validation.sh  run_validation.py  seed_retrieval_store.py  test_astar_search.py  test_blob_performance.py  test_blob_simple.py  test_blob_with_arc_data.py  test_caching_system.py  test_cli_demo.py  test_complete_features.py  test_dsl_system.py  test_heuristic_system.py  test_llm_beam_integration.py  test_llm_beam_integration_comprehensive.py  test_llm_integration.py  test_llm_simple.py  test_real_arc_validation.py  test_symmetry_integration.py  test_symmetry_performance.py  train_deadend_predictor.py  unsat_oracle_seed.py  validate_accuracy_performance.py  validate_accuracy_performance_fixed.py  validate_real_arc_dataset.py
src/arc_solver/: __init__.py  cli.py
src/arc_solver/caching/: __init__.py  cache_keys.py  cache_manager.py  file_cache.py  redis_cache.py
src/arc_solver/cli/: __init__.py  commands.py  main.py  utils.py
src/arc_solver/config/: __init__.py  config_manager.py  validators.py
src/arc_solver/core/: __init__.py  data_models.py
src/arc_solver/integration/: __init__.py  io.py
src/arc_solver/llm/: __init__.py  llm_proposer.py  prompt_templates.py  synthetic_data.py
src/arc_solver/perception/: __init__.py  blob_labeling.py  features.py  symmetry.py
src/arc_solver/reasoning/: __init__.py  abstract_domains.py  dsl_engine.py  dsl_wrapper.py  egraph.py  ensemble.py  heuristics.py  object_synthesis.py  primitives.py  rewrite_rules.py  smt_cegis.py  version_space.py
src/arc_solver/search/: __init__.py  astar.py  bidirectional.py  dead_end_predictor.py  heuristics.py  llm_integration.py  micro_oracles.py  pattern_db.py  portfolio.py  puct.py  retrieval.py  unsat_cache.py  value_calibrator.py
src/arc_solver/solver/formula_layer/: solver.py
src/arc_solver/web/: server.py
tests/: __init__.py  test_astar.py  test_blob_holes.py  test_blob_labeling.py  test_caching.py  test_cli.py  test_config.py  test_cuda_blob_labeling.py  test_data_models.py  test_dsl.py  test_dsl_wrapper.py  test_features.py  test_golden_pipeline.py  test_heuristics.py  test_integration_comprehensive.py  test_io.py  test_llm_integration.py  test_paintif_predicates.py  test_perception_comprehensive.py  test_performance_regression.py  test_reasoning_comprehensive.py  test_rewrite_rules.py  test_search_comprehensive.py  test_symmetry.py  test_symmetry_nonsquare.py
(+3 files in other folders)
